--- a/JovemProgramadorMvc/Views/Shared/_Layout.cshtml
+++ b/JovemProgramadorMvc/Views/Shared/_Layout.cshtml
@@ -30,7 +30,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Conhecimento" asp-action="Index">Conhecimentos</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Informacoes" asp-action="Index">Informações</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
